# todo-rs

./: Cargo.toml  Dockerfile  README.md
config/: default.toml  dev.toml  prod.toml
src/: dto.rs  main.rs  model.rs  repository.rs  settings.rs
src/handlers/: mod.rs
