[package]
name = "todo-rs"
version = "0.1.0"
authors = ["Beykan Sen <mail@beykansen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
bson = "1.1.0"
serde = "1.0.120"
actix-slog = "0.2.1"
slog = "2.7.0"
slog-json = "2.3.0"
config = "0.10"
futures = "0.3.12"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["tokio-runtime"]

